--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="content">
         <div class="zdjecie">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flouisville.edu%2Fenrollmentmanagement%2Fimages%2Fperson-icon%2Fimage_view_fullscreen&psig=AOvVaw2WOPbmq9pFCrkdRDWRHHT7&ust=1728571994213000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMiY-NPGgYkDFQAAAAAdAAAAABAE" width="50%" >
+            <img src="/person.jpg" width="50%" >
         </div>
     
         <h1>K.M</h1>
