--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="content">
         <div class="zdjecie">
-            <img src="/person.jpg" width="50%" >
+            <img src="person.jpg" width="50%" >
         </div>
     
         <h1>K.M</h1>
